<resources>
    <string name="app_name">APBD</string>
    <string name="hai_name_">Hello User</string>
    <string name="income">Income</string>
    <string name="income_value">"Rp1,000,000"</string>
    <string name="expense">Expense</string>
    <string name="expense_value">Rp 313,000</string>
    <string name="total">Total</string>
    <string name="remaining_budget">Rp 690,000</string>
    <string name="warning">Carefull!</string>
    <string name="latest">Latest Transaction</string>
    <string name="icon">Icon</string>
    <string name="netflix">Netflix</string>
    <string name="date">1-12-2020</string>
    <string name="price">Rp 170,000-</string>
    <string name="food">Food</string>
    <string name="home">Home</string>
    <string name="myplan">My Plan</string>
    <string name="add">New Transaction</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="planning">Planning</string>
    <string name="title_activity_loginpage">loginpage</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>