<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#06D6A0">


    <TextView
        android:id="@+id/hai_name_"
        android:layout_width="112dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="54dp"
        android:gravity="center_horizontal|top"
        android:text="@string/hai_name_"
        android:textAppearance="@style/hai_name_" />


        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <View

        android:id="@+id/rectangles"
        android:layout_width="159dp"
        android:layout_height="109dp"
        android:background="@drawable/income_expense"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="99dp"

        />
    <TextView
        android:id="@+id/income"
        android:layout_width="61dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="77dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="122dp"
        android:text="@string/income"
        android:textAppearance="@style/income"
        android:gravity="center_horizontal|top"
        />

    <TextView
        android:id="@+id/rp_1_000_00"
        android:layout_width="120dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="47dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:text="@string/income_value"
        android:textAppearance="@style/income_style"
        android:gravity="center_horizontal|top"
        />
    <View
        android:id="@+id/group_4"
        android:layout_width="159dp"
        android:layout_height="109dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="224dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="99dp"
        android:background="@drawable/income_expense"
        />
    <!-- Expense -->
    <TextView
        android:id="@+id/expense"
        android:layout_width="69dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="269dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="122dp"
        android:text="@string/expense"
        android:textAppearance="@style/income"
        android:gravity="center_horizontal|top"
        />

    <View

        android:id="@+id/group_32"
        android:layout_width="411dp"
        android:layout_height="73dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:background="#26547C" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="23dp"
        app:srcCompat="@drawable/settings" />

    <TextView
        android:id="@+id/new_transac3"
        android:layout_width="76dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="332dp"
        android:layout_marginTop="711dp"
        android:gravity="center_horizontal|top"
        android:text="@string/settings"
        android:textAppearance="@style/new_transac" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="22dp"
        app:srcCompat="@drawable/wallet" />

    <TextView
        android:id="@+id/new_transac2"
        android:layout_width="76dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="256dp"
        android:layout_marginTop="712dp"
        android:gravity="center_horizontal|top"
        android:text="@string/history"
        android:textAppearance="@style/new_transac" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="23dp"
        app:srcCompat="@drawable/add" />

    <TextView
        android:id="@+id/new_transac"
        android:layout_width="76dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="712dp"
        android:gravity="center_horizontal|top"
        android:text="@string/add"
        android:textAppearance="@style/new_transac" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="26dp"
        app:srcCompat="@drawable/bookmark" />

    <TextView
        android:id="@+id/home2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="708dp"
        android:gravity="center_horizontal|top"
        android:text="@string/myplan"
        android:textAppearance="@style/home" />

    <ImageView
        android:id="@+id/arrow_down1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="343dp"
        android:layout_marginBottom="587dp"
        app:srcCompat="@drawable/arrow_bottom" />
    <ImageView
        android:id="@+id/arrow_down2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="587dp"
        app:srcCompat="@drawable/arrow_bottom" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="585dp"
        app:srcCompat="@drawable/arrow_up" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="587dp"
        app:srcCompat="@drawable/arrow_up" />

    <TextView
        android:id="@+id/expense_value"
        android:layout_width="103dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="253dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:text="@string/expense_value"
        android:textAppearance="@style/expense_style"
        android:gravity="center_horizontal|top"
        />


    <!-- Group 5 -->
    <View
        android:id="@+id/group_5"
        android:layout_width="360dp"
        android:layout_height="109dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="29dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="224dp"
        android:background="@drawable/layer_list"
        />
    <TextView
        android:id="@+id/total"
        android:layout_width="45dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="247dp"
        android:text="@string/total"
        android:textAppearance="@style/total"
        android:gravity="center_horizontal|top"
        />
    <!-- Budget Left -->
    <TextView
        android:id="@+id/remaining_budget"
        android:layout_width="124dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="282dp"
        android:text="@string/remaining_budget"
        android:textAppearance="@style/remaining_bdt_style"
        android:gravity="center_horizontal|top"
        />
    <!-- Carefull ! -->
    <TextView
        android:id="@+id/carefull_"
        android:layout_width="98dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="251dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="264dp"
        android:text="@string/warning"
        android:textAppearance="@style/remaining_bdt_style"
        android:gravity="center_horizontal|top"
        />

    <!-- Latest Transcation -->
    <TextView
        android:id="@+id/latest_tran"
        android:layout_width="168dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="365dp"
        android:text="@string/latest"
        android:textAppearance="@style/latest_tran"
        android:gravity="center_horizontal|top"
        />
    <!-- History  -->
    <View
        android:id="@+id/group_2"
        android:layout_width="355dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="410dp"
        android:background="@drawable/layer_list2"
        />
    <!-- Ellipse 1 -->
    <View
        android:id="@+id/ellipse_1"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="52dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="419dp"
        android:background="@drawable/ellipse_1"
        android:elevation="4dp"
        />
    <!-- icon -->
    <TextView
        android:id="@+id/icon"
        android:layout_width="43dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="434dp"
        android:text="@string/icon"
        android:textAppearance="@style/icon"
        android:gravity="center_horizontal|top"
        />
    <!-- Transaction Name -->
    <TextView
        android:id="@+id/netflix"
        android:layout_width="45dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="420dp"
        android:text="@string/netflix"
        android:textAppearance="@style/netflix"
        android:gravity="center_horizontal|top"
        />
    <!-- Transaction Date -->
    <TextView
        android:id="@+id/some_id"
        android:layout_width="41dp"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="446dp"
        android:text="@string/date"
        android:textAppearance="@style/date"
        android:gravity="center_horizontal|top"
        />
    <!-- Price- -->
    <TextView
        android:id="@+id/rp_170_000_"
        android:layout_width="92dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="273dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="439dp"
        android:text="@string/price"
        android:textAppearance="@style/price"
        android:gravity="center_horizontal|top"
        />
    <!-- Group 3 -->
    <View
        android:id="@+id/group_3"
        android:layout_width="355dp"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="520dp"
        android:background="@drawable/layer_list2"
        />
    <View
        android:id="@+id/ellipse_2"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="52dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="529dp"
        android:background="@drawable/ellipse_1"
        android:elevation="4dp"
        />
    <TextView
        android:id="@+id/icon2"
        android:layout_width="43dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="544dp"
        android:text="@string/icon"
        android:textAppearance="@style/icon"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:id="@+id/food"
        android:layout_width="34dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="530dp"
        android:text="@string/food"
        android:textAppearance="@style/netflix"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:id="@+id/date"
        android:layout_width="41dp"
        android:layout_height="11dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="556dp"
        android:text="@string/date"
        android:textAppearance="@style/date"
        android:gravity="center_horizontal|top"
        />
    <TextView
        android:id="@+id/rp_60_000_"
        android:layout_width="84dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="277dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="549dp"
        android:text="@string/price"
        android:textAppearance="@style/price"
        android:gravity="center_horizontal|top"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="357dp"
        android:layout_marginBottom="24dp"
        app:srcCompat="@drawable/Dashboard" />
    <!-- Home -->
    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="709dp"
        android:gravity="center_horizontal|top"
        android:text="@string/home"
        android:textAppearance="@style/home" />
</RelativeLayout>


