<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/planName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06D6A0"
    tools:context=".MainActivity">


    <!-- Planning -->

    <TextView
        android:id="@+id/planning"
        android:layout_width="161dp"
        android:layout_height="57dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="636dp"
        android:gravity="center_horizontal|top"
        android:text="@string/planning"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />
    <!-- Rectangle 9 -->

    <!-- icon -->
    <!--- bottom bar-->

    <!-- Rectangle 9 -->

    <View
        android:id="@+id/rectangle_9"
        android:layout_width="348dp"
        android:layout_height="530dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="91dp"
        android:background="@drawable/rectangle_9" />

    <View

        android:id="@+id/group_32"
        android:layout_width="411dp"
        android:layout_height="73dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:background="#26547C" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="23dp"
        app:srcCompat="@drawable/settings" />

    <TextView
        android:id="@+id/new_transac3"
        android:layout_width="76dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="332dp"
        android:layout_marginTop="711dp"
        android:gravity="center_horizontal|top"
        android:text="@string/settings"
        android:textAppearance="@style/new_transac" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="22dp"
        app:srcCompat="@drawable/wallet" />

    <TextView
        android:id="@+id/new_transac2"
        android:layout_width="76dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="256dp"
        android:layout_marginTop="712dp"
        android:gravity="center_horizontal|top"
        android:text="@string/history"
        android:textAppearance="@style/new_transac" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="23dp"
        app:srcCompat="@drawable/add" />

    <TextView
        android:id="@+id/new_transac"
        android:layout_width="76dp"
        android:layout_height="12dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="712dp"
        android:gravity="center_horizontal|top"
        android:text="@string/add"
        android:textAppearance="@style/new_transac" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="26dp"
        app:srcCompat="@drawable/bookmark" />

    <TextView
        android:id="@+id/home2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="708dp"
        android:gravity="center_horizontal|top"
        android:text="@string/myplan"
        android:textAppearance="@style/home" />


    <!-- Group 5 -->
    <!-- Budget Left -->
    <!-- Carefull ! -->

    <!-- Latest Transcation -->
    <!-- History  -->
    <!-- Ellipse 1 -->
    <!-- icon -->
    <!-- Transaction Name -->
    <!-- Transaction Date -->
    <!-- Price- -->
    <!-- Group 3 -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="357dp"
        android:layout_marginBottom="24dp"
        app:srcCompat="@drawable/dashboard" />
    <!-- Home -->
    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="709dp"
        android:gravity="center_horizontal|top"
        android:text="@string/home"
        android:textAppearance="@style/home" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="507dp"
        app:srcCompat="@drawable/icon" />

</RelativeLayout>


